--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 </head>
 <body>
   <!-- Header section  -->
-  <header>
-    <nav class="navbar navbar-expand-lg bg-body-light shadow-sm">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
       <div class="container px-5 py-2">
         <a class="navbar-brand" href="index.html">Ninestars</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <div class="collapse navbar-collapse flex-grow-0" id="navbarNavDropdown">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link active  px-3" aria-current="page" href="#">Home</a>
@@ -53,13 +52,12 @@
         </div>
       </div>
     </nav>
-  </header>
   <!-- /Header section  -->
 
   <!-- Home section  -->
     <section class="home mt-4">
       <div class="container">
-        <div class="row gy-4 flex-column-reverse flex-lg-row ">
+        <div class="row  flex-column-reverse flex-lg-row text-center text-md-row">
           <div class="col-12 col-lg-6 d-flex flex-column justify-content-center">
             <h1 class="fs-1">Bettter digital experience with Ninestars</h1>
             <h2 class="text-secondary fs-4 mt-2">We are team of talented designers making websites with Bootstrap</h2>
