--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/main.css">
   <title>Ninestars</title>
 </head>
-<body>
+  <body>
   <!-- Header section  -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
       <div class="container px-5 py-2">
@@ -57,7 +57,7 @@
   <!-- Home section  -->
     <section class="home mt-4">
       <div class="container">
-        <div class="row  flex-column-reverse flex-lg-row text-center text-md-row">
+        <div class="row gy-4 flex-column-reverse flex-lg-row text-center text-md-row">
           <div class="col-12 col-lg-6 d-flex flex-column justify-content-center">
             <h1 class="fs-1">Bettter digital experience with Ninestars</h1>
             <h2 class="text-secondary fs-4 mt-2">We are team of talented designers making websites with Bootstrap</h2>
