--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
     <body>
     <!-- Header section  -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
-        <div class="container px-5 py-2">
+      <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
+        <div class="container px-4 py-2">
           <a class="navbar-brand" href="index.html">Ninestars</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -56,12 +56,12 @@
     <!-- /Header section  -->
 
     <!-- Home section  -->
-      <section class="home mt-4">
+      <section class="home">
         <div class="container">
-          <div class="row gy-4 flex-column-reverse flex-lg-row text-center text-md-row">
-            <div class="col-12 col-lg-6 d-flex flex-column justify-content-center">
+          <div class="row gy-4 mt-5 flex-column-reverse flex-lg-row text-md-row">
+            <div class="col-12 col-lg-6 d-flex flex-column justify-content-center text-start">
               <h1 class="fs-1">Bettter digital experience with Ninestars</h1>
-              <h2 class="text-secondary fs-4 mt-2">We are team of talented designers making websites with Bootstrap</h2>
+              <h2 class="text-secondary fs-4">We are team of talented designers making websites with Bootstrap</h2>
               <div>
                 <button type="button" class="btn btn-warning w-40 mt-4">Get Started</button>
               </div>
@@ -166,16 +166,60 @@
             <div class="text-center">
               <h2 class="text-secondary fs-4">Portfolio</h2>
               <p class="text-dark fs-1">Check out our beautifull portfolio</p>
-              <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-              </ul>
-
             </div>
+            <div>
+              <div class="col-lg-12">
+                <ul class="nav justify-content-center fs-5">
+                  <li class="nav-item">
+                    <a class="nav-link active-link" aria-current="page" href="#">All</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link  portfolio-link" href="#">App</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link portfolio-link" href="#">Card</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link portfolio-link">Web</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="row">
+                <div class="col-lg-4 col-md-6">
+                  <img class="img-fluid p-2 rounded-4" src="img/portfolio-image/portfolio-1.jpg" alt="Image">
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <img class="img-fluid p-2 rounded-4" src="img/portfolio-image/portfolio-2.jpg" alt="Image">
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <img class="img-fluid p-2 rounded-4" src="img/portfolio-image/portfolio-3.jpg" alt="Image">
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <img class="img-fluid p-2 rounded-4" src="img/portfolio-image/portfolio-4.jpg" alt="Image">
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <img class="img-fluid p-2 rounded-4" src="img/portfolio-image/portfolio-5.jpg" alt="Image">
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <img class="img-fluid p-2 rounded-4" src="img/portfolio-image/portfolio-6.jpg" alt="Image">
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <img class="img-fluid p-2 rounded-4" src="img/portfolio-image/portfolio-7.jpg" alt="Image">
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <img class="img-fluid p-2 rounded-4" src="img/portfolio-image/portfolio-8.jpg" alt="Image">
+                </div>
+                <div class="col-lg-4 col-md-6">
+                  <img class="img-fluid p-2  rounded-4" src="img/portfolio-image/portfolio-9.jpg" alt="Image">
+                </div>
+              </div>
+            </div>
+
           </div>
         </section>
+
+
+
 
 
 
